# tflex-test-task

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.h  canvas.cpp  canvas.h  color.cpp  color.h  main.cpp  output_device_console.cpp  output_device_console.h  output_device_console_ansi.cpp  output_device_console_ansi.h  output_device_console_win.cpp  output_device_console_win.h  output_device_factory.cpp  output_device_factory.h  output_device_interface.cpp  output_device_interface.h  test_colors.txt  test_lines.txt  test_palette_bars.txt  test_palette_boxes.txt  test_palette_pixels.txt
scripts/: test_ellipses.txt  test_lines.txt  test_palette_boxes.txt  test_palette_pixels.txt  test_triangles.txt
